# meshai-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_cli.py  test_metrics_fix.py  test_registration.py
.github/workflows/: ci-cd.yml
data/: meshai_dev.db
deployment/: README-CICD.md  README.md
deployment/gcp/: .gcloudignore  README.md  TEMPLATE_WARNING.md  cloudbuild.yaml  create-trigger.sh  deploy.sh
deployment/gcp/terraform/: main.tf  terraform.tfvars.example
docs/: api-reference.md  claude-code-integration.md  cli-guide.md  development-server.md  framework-adapters.md
examples/: README.md  advanced_context_example.py  advanced_routing_example.py  advanced_workflows.py  basic_agent.py  complete_system_demo.py  database_demo.py  framework_adapters.py  framework_adapters_demo.py  health_monitoring_example.py  langchain_example.py  multi_agent_workflow.py  quickstart_tutorial.py  real_world_use_cases.py
scripts/: generate-test-report.py  init-database.py  integration-test.py  meshai-cli.py  run-tests.py  start-all.py  start-dev.sh  start-gcp-service.py  start-registry.py  start-runtime.py  start-with-database.py
src/meshai/: __init__.py  cli.py
src/meshai/adapters/: __init__.py  amazon_adapter.py  anthropic_adapter.py  autogen_adapter.py  crewai_adapter.py  google_adapter.py  langchain_adapter.py  openai_adapter.py
src/meshai/cli/: __init__.py  main.py
src/meshai/cli/templates/: __init__.py  agent_templates.py  project_templates.py
src/meshai/clients/: __init__.py  registry.py  runtime.py
src/meshai/core/: __init__.py  agent.py  alerting_system.py  analytics_dashboard.py  circuit_breaker.py  config.py  context.py  context_manager.py  failover_manager.py  health_monitor.py  performance_monitor.py  registry.py  routing_engine.py  routing_metrics.py  routing_ml.py  schemas.py
src/meshai/database/: __init__.py  migrations.py  models.py  session.py
src/meshai/database/migrations/: alembic.ini  env.py
src/meshai/dev/: __init__.py  reloader.py  server.py  watcher.py
src/meshai/exceptions/: __init__.py  base.py
src/meshai/services/: __init__.py  database_registry_service.py  registry_service.py  runtime_service.py
src/meshai/utils/: __init__.py  logging.py  metrics.py  serialization.py
tests/: test_advanced_context.py  test_framework_adapters.py  test_health_monitoring.py
tests/benchmarks/: performance_benchmarks.py
tests/framework_compatibility/: test_framework_compatibility.py
tests/integration/: test_api_endpoints.py  test_integration.py
