[metadata]
name = meshai-sdk
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    httpx>=0.24.0
    pydantic>=2.0.0
    tenacity>=8.0.0
    python-jose[cryptography]>=3.3.0
    websockets>=11.0.0
    prometheus-client>=0.17.0
    structlog>=23.0.0
    click>=8.0.0
    rich>=13.0.0
    pyyaml>=6.0.0
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    meshai = meshai.cli.main:main

[egg_info]
tag_build = 
tag_date = 0